# polyextract

./: Cargo.toml  README
src/: data_extractor.rs  lib.rs  minute_extractor.rs  poly_agg_info.rs  processor.rs  session.rs  ticker_manager.rs  ticker_manager_pool.rs
tests/: minute_extractor_tests.rs  processor_tests.rs  session_tests.rs  ticker_manager_pool_tests.rs  ticker_manager_tests.rs
