[workspace]
members = ["."]

[package]
name = "polyextract"
version = "0.1.0"
authors = ["yussieik@gmail,com"]
edition = "2021"
description = "A library for data extraction from the Polygon API"
license = "MIT"
repository = "https://github.com/yussieik/polyextract"

[dependencies]
reqwest = { version = "0.12.3", features = ["json", "stream"] }
chrono = "0.4.38"
chrono-tz = "0.9.0"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
lazy_static = "1.4.0"
futures = "0.3.30"
polars = { version = "0.39.2", features = ["json", "polars-io", "lazy"] }
statrs = {version = "0.16.0"}
rayon = "1.10.0"
async-trait = "0.1.80"

[dev-dependencies]
tokio-test = "0.4"
